# c-pointer-exercises

./: CMakeLists.txt  README.md  array_of_pointers.c  global_array.c  linked_list.c  local_array.c  main.c  monolithic_array.c
